# all_yandasoft

./: .gitignore  .gitlab-ci.yml  .gitlab-docker  CMakeLists.txt  Dockerfile  README.rst  git-do  gitlab_repos.txt  make_docker_images.py  release.sh  repos.txt
