cmake_minimum_required(VERSION 3.12)

option(BUILD_COMPONENTS "Whether to build base-components" ON)
option(BUILD_ANALYSIS "Whether to build askap-analysis" ON)
option(BUILD_PIPELINE "Whether to build askap-pipetasks" ON)

include(CTest)
if (BUILD_TESTING)
	enable_testing()
endif()

add_subdirectory(lofar-common)
add_subdirectory(lofar-blob)
add_subdirectory(base-askap)
add_subdirectory(base-logfilters)
add_subdirectory(base-imagemath)
add_subdirectory(base-askapparallel)
add_subdirectory(base-scimath)
add_subdirectory(base-accessors)

if (BUILD_COMPONENTS)
	add_subdirectory(base-components)
endif()
if (BUILD_ANALYSIS)
    add_subdirectory(askap-analysis)
endif()
if (BUILD_PIPELINE)
    add_subdirectory(askap-pipelinetasks)
endif()

add_subdirectory(yandasoft)
