cmake_minimum_required(VERSION 3.12)

option(BUILD_COMPONENTS "Whether to build base-components" ON)
option(BUILD_ANALYSIS "Whether to build askap-analysis" ON)
option(BUILD_PIPELINE "Whether to build askap-pipetasks" ON)
option(BUILD_YANDASOFT "Whether to build YANDASOFT" ON)
option(BUILD_SERVICES "Whether to build askap-services" OFF)
option(BUILD_LOGAPPENDERS "Whether to build base-logappenders" OFF)

# Automatically include askap-components if building askap-analysis or askap-pipetasks
if (BUILD_ANALYSIS)
	set(BUILD_COMPONENTS ON)
endif()
if (BUILD_PIPELINE)
	set(BUILD_COMPONENTS ON)
endif()

include(CTest)
if (BUILD_TESTING)
	enable_testing()
endif()

add_subdirectory(lofar-common)
add_subdirectory(lofar-blob)
add_subdirectory(base-askap)
add_subdirectory(base-logfilters)
add_subdirectory(base-imagemath)
add_subdirectory(base-askapparallel)
add_subdirectory(base-scimath)
add_subdirectory(base-accessors)

if (BUILD_COMPONENTS)
	add_subdirectory(base-components)
endif()
if (BUILD_ANALYSIS)
    add_subdirectory(askap-analysis)
endif()
if (BUILD_PIPELINE)
    add_subdirectory(askap-pipelinetasks)
endif()

if (BUILD_YANDASOFT)
    add_subdirectory(yandasoft)
endif (BUILD_YANDASOFT)

if (BUILD_LOGAPPENDERS)
    add_subdirectory(base-logappenders)   	
endif (BUILD_LOGAPPENDERS)

if (BUILD_SERVICES)
    add_subdirectory(askap-services)
endif (BUILD_SERVICES)    
